--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
     "jsdom": "^24.1.0",
     "nodemon": "^3.1.1"
   },
